<?xml version="1.0" encoding="utf-8"?>
<!-- strings to be translated -->
<resources>

    <string name="app_name">Volksempfänger</string>
    <string name="app_name_ascii">Volksempfaenger</string>
    <string name="title_add_subscription">Add Subscription</string>
    <string name="title_delete_subscription">Are you sure?</string>
    <string name="title_settings">Volksempfänger Settings</string>
    <string name="title_tab_subscriptions">Subscriptions</string>
    <string name="title_tab_downloads">Downloads</string>
    <string name="description_add_subscription">Enter the URL of the podcast feed in order to subscribe to it</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_download">Download</string>
    <string name="menu_mark_listened">Mark as listened</string>
    <string name="menu_mark_new">Mark as new</string>
    <string name="menu_update">Update</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_play">Play</string>
    <string name="context_delete">Delete</string>
    <string name="hint_http">http://</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">unknown</string>
    <string name="install">Install</string>
    <string name="dialog_error_title">An error occurred</string>
    <string name="dialog_choose_download_enclosure">Choose a file</string>
    <string name="dialog_filemanager_missing_message">You do not have a file manager installed. Do you want to install OpenIntents File Manager?</string>
    <string name="message_podcast_already_added">You have already added this podcast to your subscriptions</string>
    <string name="message_podcast_successfully_added">You have successfully subscribed to this podcast</string>
    <string name="message_podcast_confirm_delete">Do you want to delete “%s”?</string>
    <string name="message_podcast_successfully_deleted">Podcast was successfully deleted</string>
    <string name="message_podcast_feed_download_failed">Unable to download podcast</string>
    <string name="message_podcast_feed_parsing_failed">Unable to parse podcast XML feed</string>
    <string name="message_podcast_feed_io_exception">IOException</string>
    <string name="message_podcast_feed_storage_exception">StorageException</string>
    <string name="message_podcast_feed_file_not_found_exception">FileNotFoundException</string>
    <string name="message_no_subscriptions">No subscriptions</string>
    <string name="message_download_started">The download was started</string>
    <string name="message_download_already_running">The download is already running</string>
    <string name="message_download_episode_already_downloaded">This episode has already been downloaded</string>
    <string name="message_episode_without_enclosure">There is no file attached to this episode</string>
    <string name="message_play_store_missing">You do not have the Google Play Store installed on your phone. Please download the APK from the OpenIntents website and install it.</string>
    <string name="settings_download">Download</string>
    <string name="settings_download_interval">Refresh interval</string>
    <string name="settings_download_auto">Auto Download</string>
    <string name="settings_download_wifi">Only on WiFi</string>
    <string name="settings_download_charging">Only while charging</string>
    <string name="settings_download_concurrent">Concurrent downloads</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_storage_location">Storage Location</string>
    <string name="settings_about">About</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_about_website">Website</string>
    <string name="settings_about_license">License</string>
    <string name="settings_about_authors">Authors</string>
    <string name="settings_summary_download">Podcast download settings</string>
    <string name="settings_summary_download_auto">Automatically download new episodes</string>
    <string name="settings_summary_download_wifi">Only download new episodes while connected to a WiFi network</string>
    <string name="settings_summary_download_charging">Only download new episodes while connected to a power source</string>
    <string name="settings_summary_download_concurrent">Maximum number of downloads running at the same time</string>
    <string name="settings_summary_storage">Local podcast storage settings</string>
    <string name="settings_summary_about">Information about Volksempfänger</string>
    <string name="settings_summary_about_license">Show license information</string>
    <string name="menu_import">Import</string>
    <string name="dialog_choose_opml">Choose OPML file</string>
    <string name="button_import">Import</string>
    <string name="dialog_choose_import_feeds">Choose feeds to import</string>
    <string name="message_no_downloads">No downloads</string>
    <string name="empty_description">no description</string>

    <string-array name="settings_interval_choices">
        <item>Manually</item>
        <item>Every hour</item>
        <item>Every two hours</item>
        <item>Every four hours</item>
        <item>Every eight hours</item>
        <item>Every twelve hours</item>
        <item>Every day</item>
    </string-array>

    <string name="episode_name">Episode Name</string>
    <string name="podcast">Podcast</string>
    <string name="message_insert_sdcard">Please insert an external storage medium in order to use Volksempfänger</string>
    <string name="unknown_duration">unknown duration</string>
    <string name="unknown_size">unknown size</string>
    <string name="message_error_file_not_found">The file “%s” could not be found</string>
    <string name="title_file_not_found">File not found</string>
    <string name="title_import_error">Import Error</string>
    <string name="message_error_import">The import of the following podcasts failed</string>
    <string name="pause">Pause</string>
    <string name="error_download">download error</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast-Forward</string>
    <string name="message_error_import_unexpected">An unexpected error happened during import</string>
    <string name="title_send_error_report">Send error report</string>
    <string name="report_error">Report</string>
    <string name="title_share">Share</string>
    <string name="menu_share">Share</string>
    <string name="menu_website">Website</string>
    <string name="message_import_started">Import started…</string>
    <string name="settings_about_libraries">Libraries</string>
    <string name="settings_summary_about_flattr">Support the development of Volksempfänger</string>
    <string name="settings_about_flattr">Flattr</string>
    <string name="notification_collapse">collapse</string>
    <string name="title_tab_playlists">Playlists</string>
    <string name="title_playlist_new">New</string>
    <string name="title_playlist_listening">Listening</string>
    <string name="message_no_episodes">No episodes</string>
    <string name="title_playlist_downloaded">Downloaded</string>
    <string name="error_shownotes">Unable to display shownotes</string>
    <string name="title_tab_discover">Discover</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search or type URL</string>
    <string name="import_to_volksempfaenger">Import to Volksempfänger</string>
    <string name="unknown_error">Unknown error</string>
    <string name="title_popular">Popular</string>
    <string name="title_search_results">Search results</string>
    <string name="title_search_results_for">Search results for “%s”</string>
    <string name="message_subscribing_podcast">Subscribing to podcast…</string>
    <string name="title_tag_all">All</string>
    <string name="button_retry">Retry</string>
    <string name="message_error_loading">Loading failed</string>
    <string name="unknown_error_occured">An unknown error occurred.</string>
    <string name="settings_summary_flattr">Flattr settings</string>
    <string name="settings_flattr">Flattr</string>
    <string name="button_flattr_auth">Connect to Flattr</string>
    <string name="settings_summary_flattr_auth">Allow %s to flattr episodes</string>
    <string name="flattr_connected_to">Connected to &lt;b>%s&lt;/b> on Flattr</string>
    <string name="flattr_connecting">Connecting…</string>
    <string name="settings_flattr_auto">Flattr automatically</string>

    <string-array name="settings_flattr_auto_choices">
        <item>Never</item>
        <item>Started episodes</item>
        <item>Finished episodes</item>
    </string-array>

    <string name="button_flattr">Flattr</string>
    <string name="title_error_flattr_authorization">Authorization Error</string>
    <string name="message_error_flattr_authorization">Flattr authorization failed</string>
    <string name="title_flattr_no_account">No Flattr account</string>
    <string name="message_flattr_no_account">You have to add your Flattr account to flattr episodes.</string>
    <string name="message_no_website">No website</string>
    <string name="error_download_mobile_disabled">Downloading over mobile networks is disabled</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_n_selected">%d selected</string>
    <string name="dialog_download_mobile">Wifi is not connected, do you want download via mobile network? (This might
        cause additional costs.)
    </string>
    <string name="menu_export">Export</string>
    <string name="message_export_ok">Successfully exported your podcasts to %1$s</string>
    <string name="message_export_failed">Failed to export your podcasts!</string>

</resources>