<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_play"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="ifRoom"
        android:title="@string/menu_play"
        android:visible="false"/>
    <item
        android:id="@+id/item_download"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="ifRoom"
        android:title="@string/menu_download"
        android:visible="false"/>
    <item
        android:id="@+id/item_mark_listened"
        android:title="@string/menu_mark_listened"
        android:visible="false"/>
    <item
        android:id="@+id/item_mark_new"
        android:title="@string/menu_mark_new"
        android:visible="false"/>
    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/item_website"
        android:title="@string/menu_website"/>
    <item
        android:id="@+id/item_share"
        android:title="@string/menu_share"/>

</menu>