<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:text="@string/description_add_subscription" />

    <EditText
        android:id="@+id/edittext_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:inputType="textUri"
        android:text="@string/hint_http" >

        <requestFocus />
    </EditText>

    <LinearLayout style="@style/Theme.ButtonBar" >

        <Button
            android:id="@+id/button_cancel"
            style="@style/Theme.DialogButton"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_add"
            style="@style/Theme.DialogButton"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>