<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_selection_spinner"
        android:actionViewClass="android.widget.Spinner"
        android:showAsAction="always"/>

    <!-- re-enable this wenn #52 is fixed -->
    <!--
    <item
        android:id="@+id/item_download"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="always"
        android:title="@string/menu_download"/>
    -->
    <item
        android:id="@+id/item_mark_listened"
        android:title="@string/menu_mark_listened"/>
    <item
        android:id="@+id/item_mark_new"
        android:title="@string/menu_mark_new"/>
    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_delete"/>

</menu>